# pdf-reader

./: .env.example  .gitignore  Pruefungsordnung_BSc_Inf_2024_20260131_221939_result.json  Pruefungsordnung_BSc_Inf_2024_20260201_005902_result-2.0.json  README.md  analyze_pdf.py  evaluate_extraction.py  main.py  msc_computer_science_questions.json  output.json  pyproject.toml  requirements.txt  run_extract_chunk.py  stpo_bsc-informatik_25-01-23_lese-chunks.json  stpo_bsc-informatik_25-01-23_lese.json  stpo_bsc-informatik_25-01-23_lese_20260201_101304_result-3,0.json  stpo_bsc-informatik_25-01-23_lese_20260201_103610_result-4.0.json  stpo_bsc-informatik_25-01-23_lese_extracted.json  test_parser.py
archived/scripts/: __init__.py
archived/src/: logging_config.py
archived/tests/: __init__.py  test_document_parser.py
chroma_db/: chroma.sqlite3
chunking/: README.md  __init__.py  app.py  chunker.py  config.py  models.py  sentence_splitter.py  service.py  storage.py  token_counter.py
data/retrieval/: chunks.jsonl  eval_bm25_20260203_213921.json  eval_hybrid_20260203_213921.json  (+1 more)
frontend/: README.md  marley_app.py
generation/: README.md  __init__.py  app.py  citations.py  cli.py  config.py  context_builder.py  http_client.py  json_utils.py  models.py  ollama_client.py  postprocess.py  prompts.py  service.py
pdf_extractor/: README.md  __init__.py  api_client.py  app.py  config.py  exceptions.py  extractor.py  models.py  pdf_to_images.py  pdf_utils.py  prompts.py  qa.py  service.py  storage.py  table_extractor.py  text_extractor.py  validation.py
retrieval/: README.md  __init__.py  app.py  bm25_index.py  config.py  embedder.py  hybrid.py  models.py  rerank.py  service.py  storage.py  vector_index.py
scripts/: analyze.py  chunking.py  chunking_service.py  debug_context_analysis.py  evaluate.py  extract_pdf.py  pdf_extraction.py  pdf_extractor_service.py  process_for_rag.py  retrieval_service.py  validate.py  vector_service.py
src/: __init__.py
tests/: __init__.py  conftest.py  test_chunk_generator.py  test_chunker.py  test_chunking_models.py  test_document_parser.py  test_embedder.py  test_evaluator.py  test_exceptions.py  test_extractor.py  test_image_extractor.py  test_integration.py  test_models.py  test_prompts.py  test_retrieval_service.py  test_retriever.py  test_sentence_splitter.py  test_storage_paths.py  test_store.py  test_table_extractor.py  test_token_counter.py  test_vector_store_models.py  test_vision_processor.py
vector_store/: README.md  __init__.py  embedder.py  main.py  models.py  retriever.py  store.py
(+58 files in other folders)
